--- a/css/hud.css
+++ b/css/hud.css
@@ -1,8 +1,8 @@
 
 body {
-/*    background-color: black;
+    background-color: black;
     color: white;
-*/    padding: 1em;
+    padding: 1em;
 }
 
 #content {
@@ -15,14 +15,32 @@ body {
     display: inline-block;
 }
 
+#display_container {
+    width: 77.5%;
+}
+
 #hud {
     width: 20%;
     vertical-align: top;
-    border: 3px solid black;
+    border: 3px solid white;
     border-radius: 5px;
     padding: 1em;
+    position: absolute;
+    right: 1em;
 }
 
-#display_container {
-    width: 77.5%;
+#hud h1 {
+    padding: 0em;
+    margin: 0em;
+}
+
+#hud #version {
+    text-align: center;
+    font-size: .8em;
+    font-style: oblique;
+    position: absolute;
+    bottom: 0px;
+    margin: auto;
+    left: 0;
+    right: 0;
 }
