--- a/css/hud.css
+++ b/css/hud.css
@@ -2,13 +2,13 @@
 body {
     background-color: black;
     color: white;
-    padding: 1em;
 }
 
 #content {
     list-style-type: none;
     margin: 0px;
     padding: 0px;
+    margin: 12px;
 }
 
 #content li {
